--- a/androidjoketeller/src/main/AndroidManifest.xml
+++ b/androidjoketeller/src/main/AndroidManifest.xml
@@ -1,2 +1,9 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.android.androidjoketeller" />
+    package="com.example.android.androidjoketeller">
+
+    <application>
+        <activity android:name=".JokeTellingActivity"></activity>
+    </application>
+
+</manifest>
