--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,18 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    flavorDimensions "tier"
+    productFlavors {
+        free {
+            applicationId 'com.udacity.gradle.builditbigger.free'
+            dimension "tier"
+        }
+        paid {
+            applicationId 'com.udacity.gradle.builditbigger.paid'
+            dimension "tier"
+        }
+    }
 }
 
 dependencies {
@@ -41,6 +53,7 @@ dependencies {
     implementation 'com.google.api-client:google-api-client:1.23.0'
     implementation 'com.google.http-client:google-http-client-android:1.23.0'
     implementation 'com.google.code.findbugs:jsr305:3.0.1'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-intents:2.2.2'
 
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
