cleaned and rebuilt project

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,11 @@ buildscript {
 
 android {
     compileSdkVersion 27
-    buildToolsVersion "27.0.3"
+    buildToolsVersion '27.0.3'
+
+    lintOptions{
+        abortOnError false
+    }
 
     defaultConfig {
         applicationId "com.udacity.gradle.builditbigger"
@@ -43,6 +47,8 @@ android {
             dimension "tier"
         }
     }
+
+
 }
 
 dependencies {
